# todoer

./: .gitignore  pyproject.toml
backend/backend/: settings.py  urls.py
backend/todo/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  AuthContext.js
src/todoer/: __init__.py
