[project]
name = "todoer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "will2357", email = "will.highducheck@gmail.com" }
]
requires-python = "==3.9.1"
dependencies = []

[project.scripts]
todoer = "todoer:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
